source/objects/Sales_Invoice_Total__c/fields/Absolute_Value__c.field-meta.xml
<CustomField>
    <fullName>Absolute_Value__c</fullName>
    <label>Absolute Value</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>