source/objects/Sales_Invoice_Total__c/fields/Sales_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Sales_Invoice__c</fullName>
    <label>Sales Invoice</label>
    <referenceTo>Sales_Invoice__c</referenceTo>
    <relationshipName>R00N40000001jWpKEAU</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>